# Askme

./: CMakeLists.txt  PERSONS.txt  QUESTIONS.txt  README.md  USERNAME.txt  main.cpp
