cmake_minimum_required(VERSION 3.26)
project(clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(clion main.cpp
        ../finalproject/final/final/Source.cpp)
add_executable(clion2 main2.cpp
        ../finalproject/final/final/Source.cpp)
add_executable(clion1 main1.cpp
        ../finalproject/final/final/Source.cpp)
